--- a/static/styles.css
+++ b/static/styles.css
@@ -1,59 +1,54 @@
-.navbar-custom {
-    background-color:#229922;
-    color:#ffffff;
-    border-radius:0;
-}
-
-.navbar-custom .navbar-nav > li > a {
-    color:#fff;
-}
-.navbar-custom .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
-    color: #ffffff;
-    background-color:transparent;
-}
-.navbar-custom .navbar-brand {
-    color:#eeeeee;
-}
-
-.nav-justified{
-	font-family: 'Tahoma', 'Geneva', sans-serif;
-}
-
-a:hover {
-	color: #a7c1bc;
-}
-
-a {
-	color: gray;
-}
-.container { 
-	padding: 400px 200px; /* This gives our headings a bit of breathing room */ 
-} 
-.js-background-1 { 
-	background: transparent url(background1.png) center 0 no-repeat; 
-} 
-.js-background-2 {
-	background: transparent url(background2.png) center 0 no-repeat; 
-}
-
-.jumbotron {
-  background-image: url("/static/img/jumbotron.jpg");
-  color:white;
-  padding: 25px;
-}
-/*.jumbotron {
-  background-image: url("static/img/rsz_jumbotron.jpg");
-  margin-bottom: 0px;
-  background-position: 0% 25%;
-  background-size: cover;
-  color:white;
-  background-repeat: no-repeat;
-  padding: 20px;
-  height: 300px;
-}*/
 
 body {
-	font-family: "Trebuchet MS", "Helvetica", "Arial",  "Verdana", "sans-serif";
 	font-size: 62.5%;
+  padding: 0px;
+  margin-top: 0px;
 }
 
+.navbar {
+  margin-bottom: 0 !important;
+}
+
+.nav-brand {
+  font-family: 'Lily Script One', cursive;
+  color: #009999 !important;
+  font-size: 30px !important;
+}
+
+.nav-link {
+  font-family: 'Lily Script One', cursive;
+  color: #009999 !important;
+  font-size: 15px !important;
+  text-align: right;
+}
+
+ul.nav a:hover {
+  color:#80CCCC !important;
+  text-align: center;
+  text-align: right;
+}
+
+#pack-background {
+  background-image: url("../static/img/jumbotron.jpg");
+  width: 1280px;
+  height: 482px;
+}
+
+.title-style {
+  font-family:'Lato', sans-serif;
+  font-size: 30px !important;
+}
+
+.label-style {
+  font-family:'Lato', sans-serif;
+  font-size: 15px !important;
+}
+
+.title-row {
+  height: 30%;
+  padding-top: 1em;
+}
+
+.form-row {
+  height: 8%
+}
