--- a/static/styles.css
+++ b/static/styles.css
@@ -52,3 +52,27 @@ ul.nav a:hover {
 .form-row {
   height: 8%
 }
+
+.date-picker {
+  width: 75px;
+  font-size: 12px;
+  font-weight: normal;
+  font-family:'Lato', sans-serif;
+}
+
+select {
+  font-size: 12px;
+  font-weight: normal;
+  font-family:'Lato', sans-serif;
+  border-radius: 0px;
+  -webkit-appearance: none;
+  background-color: white;
+  width: 100%;
+  padding: 3px;
+}
+
+.btn {
+  border-radius: 0px;
+  font-family: 'Lily Script One', cursive;
+  font-family:'Lato', sans-serif;
+}
