--- a/templates/main.html
+++ b/templates/main.html
@@ -89,9 +89,9 @@
 					</div>
 					<div class="col-md-4">
 						<label>
-							<input type="text" id="depart-date" class="date-picker" name="depart_date">
+							<input type="text" id="depart-date" class="date-picker" name="depart_date" required>
 							to
-							<input type="text" id="return-date" class="date-picker" name="return_date">
+							<input type="text" id="return-date" class="date-picker" name="return_date" required>
 						</label>
 					</div>
 				</div>
