--- a/templates/main.html
+++ b/templates/main.html
@@ -139,7 +139,7 @@
 			<div class="row"><!--row6-->
 				<div class="col-md-1"></div><!--column spacer-->
 				<div class="col-md-6 button-row">
-					<button type="submit" value="submit" class="btn btn-success">
+					<button type="submit" value="submit" class="btn btn-success" id="get-packing-button">
 						Get packing!
 					</button>
 					</form>	 <!--ending the get-packing form -->	
@@ -151,15 +151,17 @@
 		</div><!--end of form section-->
 
 
-		<div id="get-packing"><!--beginning of results section-->
-		This is the get packing section
-		</div> <!--beginning of results section-->
+		<div id="get-packing"><a="get-packing">blah</a><!--beginning of results section-->
+	
+		</div> <!--end of results section-->
 
 
 		<div id="how-it-works"><!--beginning of how it works section-->
+		How it works
 		</div> <!--end of how it works section-->
 
 		<div id="about"><!--beginning of about section-->
+		About
 		</div> <!--end of about section-->
 	</body>
 		
